2002-12-03  David Hyatt  <hyatt@apple.com>

	Backing out a file that I did not intend to check in.

        * khtml/misc/loader.cpp:

2002-12-03  Richard Williamson   <rjw@apple.com>

        D'oh.  Fixed last minute change that broke the build.
        
        * kwq/KWQFont.mm:
        (QFont::getNSFont):

2002-12-03  David Hyatt  <hyatt@apple.com>

	Remove the moveWidgetsAside function.  This fixes all the
	form controls on livepage.apple.com that were getting hosed
	by the scrolling marquee.
	
        Reviewed by: darin

        * khtml/html/html_tableimpl.cpp:
        (HTMLTableRowElementImpl::addChild):
        * khtml/misc/loader.cpp:
        * khtml/rendering/render_root.cpp:
        (RenderRoot::layout):
        * kwq/KWQKHTMLPart.h:
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::KWQKHTMLPart):
        (KWQKHTMLPart::paint):

2002-12-03  Richard Williamson   <rjw@apple.com>

        Fixed 3019986.  Use an array of font families instead of a single
        font family to support CSS family lists.
        r=hyatt
                
        * kwq/KWQFont.h:
        * kwq/KWQFont.mm:
        (QFont::getNSFont):
        * kwq/KWQFontMetrics.mm:
        (QFontMetrics::width):
        (QFontMetrics::floatWidth):
        (QFontMetrics::floatCharacterWidths):
        * kwq/KWQPainter.mm:
        (QPainter::drawText):
        (QPainter::drawUnderlineForText):
        * kwq/WebCoreTextRenderer.h:
        * kwq/WebCoreTextRendererFactory.h:
        * kwq/WebCoreTextRendererFactory.m:
        (-[WebCoreTextRendererFactory rendererWithFamilies:traits:size:]):
        (-[WebCoreTextRendererFactory fontWithFamilies:traits:size:]):

2002-12-03  David Hyatt  <hyatt@apple.com>

	Fix for 3112599, aol.com shopping page doesn't work.  Apply
	the same form demotion trick to <tr> that I did already for
	<tbody> and <table>.

	r=gramps
	
        * khtml/html/dtd.cpp:
        (DOM::checkChild):
        * khtml/html/html_tableimpl.cpp: